--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,64 @@ name: "Build and Publish Base Images"
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  packages: write
+
 jobs:
+  publish_to_github:
+    runs-on: ubuntu-latest
+    env:
+      REPOSITORY: "lancemccarthy/reporting-aspnet"
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{github.actor}}
+        password: ${{secrets.GITHUB_TOKEN}}
+
+    - name: ASPNET 6.0
+      uses: docker/build-push-action@v5
+      with:
+        context: 'BuildContexts/aspnet60'
+        platforms: linux/arm64,linux/amd64
+        push: true
+        tags: |
+          ${{env.REPOSITORY}}:6.0
+
+    - name: ASPNET 8.0
+      uses: docker/build-push-action@v5
+      with:
+        context: 'BuildContexts/aspnet80'
+        platforms: linux/arm64,linux/amd64
+        push: true
+        tags: |
+          ${{env.REPOSITORY}}:8.0
+
+    - name: ASPNET 9.0
+      uses: docker/build-push-action@v5
+      with:
+        context: 'BuildContexts/aspnet90'
+        platforms: linux/arm64,linux/amd64
+        push: true
+        tags: |
+          ${{env.REPOSITORY}}:9.0
+
   publish_to_docker:
+    if: ${ succeed() }
     runs-on: ubuntu-latest
     env:
       REPOSITORY: "lancemccarthy/reporting-aspnet"
