--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,11 +7,12 @@ permissions:
   contents: read
   packages: write
 
+env:
+  REPOSITORY: "lancemccarthy/reporting-aspnet"
+
 jobs:
   publish_to_github:
     runs-on: ubuntu-latest
-    env:
-      REPOSITORY: "lancemccarthy/reporting-aspnet"
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -25,44 +26,25 @@ jobs:
       uses: docker/setup-buildx-action@v3
       
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
+      run: docker login ghcr.io -u ${{github.actor}} -p ${{secrets.GITHUB_TOKEN}}
 
-    - name: ASPNET 6.0
-      uses: docker/build-push-action@v5
-      with:
-        context: 'BuildContexts/aspnet60'
-        platforms: linux/arm64,linux/amd64
-        push: true
-        tags: |
-          ${{env.REPOSITORY}}:6.0
+    - name: ASP.NET 6.0 - Multi-arch image
+      working_directory: 'BuildContexts/aspnet60'
+      run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:6.0 .
 
-    - name: ASPNET 8.0
-      uses: docker/build-push-action@v5
-      with:
-        context: 'BuildContexts/aspnet80'
-        platforms: linux/arm64,linux/amd64
-        push: true
-        tags: |
-          ${{env.REPOSITORY}}:8.0
+    - name: ASP.NET 8.0 - Multi-arch image
+      working_directory: 'BuildContexts/aspnet80'
+      run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:8.0 .
 
-    - name: ASPNET 9.0
-      uses: docker/build-push-action@v5
-      with:
-        context: 'BuildContexts/aspnet90'
-        platforms: linux/arm64,linux/amd64
-        push: true
-        tags: |
-          ${{env.REPOSITORY}}:9.0
+    - name: ASP.NET 9.0 - Multi-arch image
+      working_directory: 'BuildContexts/aspnet90'
+      run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:9.0 .
+
 
   publish_to_docker:
+    needs: [publish_to_github]
     if: ${{ success() }}
     runs-on: ubuntu-latest
-    env:
-      REPOSITORY: "lancemccarthy/reporting-aspnet"
     steps:
     - name: Checkout
       uses: actions/checkout@v4
