--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,39 +11,37 @@ env:
   REPOSITORY: "lancemccarthy/reporting-aspnet"
 
 jobs:
-  publish_to_github:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+  # publish_to_github:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout
+  #     uses: actions/checkout@v4
+  #     with:
+  #       fetch-depth: 0
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+  #   - name: Set up QEMU
+  #     uses: docker/setup-qemu-action@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v3
       
-    - name: Login to GitHub Container Registry
-      run: docker login ghcr.io -u ${{github.actor}} -p ${{secrets.GITHUB_TOKEN}}
+  #   - name: Login to GitHub Container Registry
+  #     run: docker login ghcr.io -u ${{github.actor}} -p ${{secrets.GITHUB_TOKEN}}
 
-    - name: ASP.NET 6.0 - Multi-arch image
-      working-directory: 'BuildContexts/aspnet60'
-      run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:6.0 .
+  #   - name: ASP.NET 6.0 - Multi-arch image
+  #     working-directory: 'BuildContexts/aspnet60'
+  #     run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:6.0 .
 
-    - name: ASP.NET 8.0 - Multi-arch image
-      working-directory: 'BuildContexts/aspnet80'
-      run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:8.0 .
+  #   - name: ASP.NET 8.0 - Multi-arch image
+  #     working-directory: 'BuildContexts/aspnet80'
+  #     run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:8.0 .
 
-    - name: ASP.NET 9.0 - Multi-arch image
-      working-directory: 'BuildContexts/aspnet90'
-      run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:9.0 .
+  #   - name: ASP.NET 9.0 - Multi-arch image
+  #     working-directory: 'BuildContexts/aspnet90'
+  #     run: docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${{env.REPOSITORY}}:9.0 .
 
 
-  publish_to_docker:
-    needs: [publish_to_github]
-    if: ${{ success() }}
+  publish_images:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -69,6 +67,13 @@ jobs:
         username: ${{secrets.DOCKER_HUB_USERNAME}}
         password: ${{secrets.DOCKER_HUB_PAT}}
 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: ASPNET 6.0
       uses: docker/build-push-action@v5
       with:
@@ -77,6 +82,7 @@ jobs:
         push: true
         tags: |
           ${{env.REPOSITORY}}:6.0
+          ghcr.io/${{env.REPOSITORY}}:6.0
 
     - name: ASPNET 8.0
       uses: docker/build-push-action@v5
@@ -86,6 +92,7 @@ jobs:
         push: true
         tags: |
           ${{env.REPOSITORY}}:8.0
+          ghcr.io/${{env.REPOSITORY}}:8.0
 
     - name: ASPNET 9.0
       uses: docker/build-push-action@v5
@@ -95,3 +102,4 @@ jobs:
         push: true
         tags: |
           ${{env.REPOSITORY}}:9.0
+          ghcr.io/${{env.REPOSITORY}}:9.0
