--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
 name: "Build and Publish Base Images"
 on:
   workflow_dispatch:
+  schedule:
+    - cron:  '0 0 1 * *'
 
 permissions:
   id-token: write
