--- a/BuildContexts/aspnet60/Dockerfile
+++ b/BuildContexts/aspnet60/Dockerfile
@@ -1,6 +1,6 @@
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 
-# Pre-install Telerik Reporting dependencies for Skia fonts, then clean up.
+# Pre-install dependencies needed by SkiaSharp to render text.
 RUN apt-get update \
     && apt-get install -y --allow-unauthenticated \
     libfreetype6 \
